--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
   <h2>Credentials and Portfolio</h2>
 
   <!-- add two hyperlinks to resume page and github page separated by a vertical line -->
+  <a href="https://mega.nz/file/5OZ2QQSC#rW1HAbIhk-O2dhOfmVS0LWIDdop8Nom939LS_RqlyWQ" target="_blank">Rikai</a></p> | <a href="https://mega.nz/file/FXx1TTKY#yhPcB1KSuc6pt4p__l08Ut9yyEcOUr1Be8TYs5Z1hQ8" target="_blank">MKatsodou</a></p>
+
+  
   <p><a href="resume.html">My Resume</a> | <a href="https://github.com/harrisonkong" target="_blank">My GitHub</a></p>
 
   <h2>Contact</h2>
