Links anime y plantilla

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
   <h2>Credentials and Portfolio</h2>
 
   <!-- add two hyperlinks to resume page and github page separated by a vertical line -->
-  <a href="https://mega.nz/file/5OZ2QQSC#rW1HAbIhk-O2dhOfmVS0LWIDdop8Nom939LS_RqlyWQ" target="_blank">Rikai</a></p> | <a href="https://mega.nz/file/FXx1TTKY#yhPcB1KSuc6pt4p__l08Ut9yyEcOUr1Be8TYs5Z1hQ8" target="_blank">MKatsodou</a></p>
+  <a href="https://docs.google.com/spreadsheets/d/1Peb_0iNYlPPgRcW7C8iVucKY-gbSbiap/edit?usp=sharing&ouid=104816512763817229955&rtpof=true&sd=true" target="_blank">Rikai</a></p> | <a href="https://mega.nz/file/FXx1TTKY#yhPcB1KSuc6pt4p__l08Ut9yyEcOUr1Be8TYs5Z1hQ8" target="_blank">MKatsodou</a></p>
 
   
-  <p><a href="resume.html">My Resume</a> | <a href="https://github.com/harrisonkong" target="_blank">My GitHub</a></p>
+  <p><a href="resume.html">My Resume</a> | <a href="https://animelon.com/series/Shirokuma%20Cafe%20(Polar%20Bear%20Cafe)" target="_blank">My GitHub</a></p>
 
   <h2>Contact</h2>
 
