--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
   <h2>About Me</h2>
 
   <!-- add a few paragraph lines to describe you -->
-  <p>I am a mobile app and website developer in Los Angeles.</p> <!-- where do you live? -->
+  <p>異なる文化や言語に対する好奇心と興奮が幸せになっています。
+
+日本の社会と会社に没頭して少し分かってから、文化に尊敬します。
+
+新しい環境で成長し、進化することを期待しています。</p> <!-- where do you live? -->
   <p>I have a BS of computer science from the University of Massachusetts.</p> <!-- Where studying/studied? -->
   <p>I am currently the founder and software engineer of skyRoute66.</p> <!-- current job or current school year? -->
 
