--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 日本の社会と会社に没頭して少し分かってから、文化に尊敬します。
 
 新しい環境で成長し、進化することを期待しています。</p> <!-- where do you live? -->
-  <p>I have a BS of computer science from the University of Massachusetts.</p> <!-- Where studying/studied? -->
+  <p>Goal: 現地の言語スキル向上を目指します。現地の文化に適応し、効果的な仕事を行います。
+
+
+Objective:
+新しい仕事に必要なスキルや知識を習得するため、継続的な学びを大切にします。</p> <!-- Where studying/studied? -->
   <p>I am currently the founder and software engineer of skyRoute66.</p> <!-- current job or current school year? -->
 
   <!-- add a section called "Credentials and Portofolio -->
