--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <html lang="en">
 
-<header>
+<header
+  >
   <!-- change the name to yours! -->
   <title>Harrison Kong's Portal</title>
   <!-- link to the master cascading stylesheet -->
